# crimson-server

./: .gitignore  README.md  main.py  pyproject.toml
crimson/http/routes/: web.py
scripts/: check-fmt.sh  check-types.sh  dev.sh  fmt.sh  install-system-deps.sh
